--- a/BetaTestLab_01_HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/BetaTestLab_01_HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -6939,6 +6939,195 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_LVCP5.astCompensationGroups.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.astCompensationGroups.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.astCompensationGroups.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.astCompensationGroups.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.astCompensationGroups.4": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[4]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.astCompensationGroups.5": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[5]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.astCompensationGroups.6": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::astCompensationGroups[6]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CompensationGroup"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup1_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup1_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 1 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup2_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup2_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 2 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup3_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup3_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 3 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup4_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup4_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 4 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup5_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup5_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 5 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup6_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup6_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 6 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP5.stGroup7_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP5::stGroup7_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 7 Kontaktör HMI bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.0": {
             "ACCESS": 3,
             "DOMAIN": "ADS",
@@ -7474,6 +7663,116 @@
             "DOMAIN": "ADS",
             "DYNAMIC": true,
             "MAPPING": "PLC1::PRG_LVCP2_Colors::arrLine[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.4": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[4]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.5": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[5]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.6": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrCapacitorSchemaColor[6]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrLine.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrLine[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrLine.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrLine[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrLine.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrLine[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP5_Colors.arrLine.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP5_Colors::arrLine[3]",
             "SCHEMA": {
                 "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
             },
@@ -8443,6 +8742,20 @@
                 "PLC1.GVL_LVCP2.stGroup7_ContactorHMI": 3,
                 "PLC1.GVL_LVCP2.stGroup8_ContactorHMI": 3,
                 "PLC1.GVL_LVCP2.stGroup9_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.0": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.1": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.2": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.3": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.4": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.5": 3,
+                "PLC1.GVL_LVCP5.astCompensationGroups.6": 3,
+                "PLC1.GVL_LVCP5.stGroup1_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.stGroup2_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.stGroup3_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.stGroup4_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.stGroup5_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.stGroup6_ContactorHMI": 3,
+                "PLC1.GVL_LVCP5.stGroup7_ContactorHMI": 3,
                 "PLC1.MAIN.lineColor": 3,
                 "PLC1.MAIN.sad": 3,
                 "PLC1.MAIN.xx": 3,
@@ -8504,6 +8817,17 @@
                 "PLC1.PRG_LVCP2_Colors.arrLine.1": 3,
                 "PLC1.PRG_LVCP2_Colors.arrLine.2": 3,
                 "PLC1.PRG_LVCP2_Colors.arrLine.3": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.0": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.1": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.2": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.3": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.4": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.5": 3,
+                "PLC1.PRG_LVCP5_Colors.arrCapacitorSchemaColor.6": 3,
+                "PLC1.PRG_LVCP5_Colors.arrLine.0": 3,
+                "PLC1.PRG_LVCP5_Colors.arrLine.1": 3,
+                "PLC1.PRG_LVCP5_Colors.arrLine.2": 3,
+                "PLC1.PRG_LVCP5_Colors.arrLine.3": 3,
                 "SetLocale": 3,
                 "SubscribeEvents": 3,
                 "TcHmiSqliteLogger.Diagnostics": 1,
